--- a/miOrden.css
+++ b/miOrden.css
@@ -30,6 +30,7 @@ body{
     background-color: var(--text-input-field);
     border-radius: 8px;
     padding: 0 24px;
+    margin-bottom: 30px;
 }
 
 .order p:nth-child(1){
@@ -87,8 +88,8 @@ body{
 }
 
 .shopping-cart figure img{
-    width: 90px;
-    height: 50px;
+    width: 150px;
+    height: 90px;
     border-radius: 10px;
     object-fit: cover;
 }
